--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                         <div class="list-colors-title">过期域名TOP</div>
                         <div class="list-body">
                             <div class="list-colors-list" style="margin-top: 0">
-<!--                                <div class="list-colors-item"><div style="width:50%;background:#ab1717"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:20%;background:#ce550b"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:80%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:30%;background:#0bb66f"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:70%;background:#a40ea9"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:56%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:23%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:84%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:48%;background:#50af10"></div><span>阿里云计算有限公司265个</span></div>-->
+                                <div class="list-colors-item"><div style="width:50%;background:#ab1717"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:20%;background:#ce550b"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:80%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:30%;background:#0bb66f"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:70%;background:#a40ea9"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:56%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:23%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:84%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:48%;background:#50af10"></div><span>阿里云计算有限公司265个</span></div>
                             </div>
                         </div>
                     </div>
@@ -68,15 +68,15 @@
                         <div class="list-colors-title">违规站点TOP</div>
                         <div class="list-body">
                             <div class="list-colors-list" style="margin-top: 0">
-<!--                                <div class="list-colors-item"><div style="width:50%;background:#ab1717"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:20%;background:#ce550b"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:80%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:30%;background:#0bb66f"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:70%;background:#a40ea9"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:56%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:23%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:84%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>-->
-<!--                                <div class="list-colors-item"><div style="width:48%;background:#50af10"></div><span>阿里云计算有限公司265个</span></div>-->
+                                <div class="list-colors-item"><div style="width:50%;background:#ab1717"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:20%;background:#ce550b"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:80%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:30%;background:#0bb66f"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:70%;background:#a40ea9"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:56%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:23%;background:#bb8407"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:84%;background:#109b91"></div><span>阿里云计算有限公司265个</span></div>
+                                <div class="list-colors-item"><div style="width:48%;background:#50af10"></div><span>阿里云计算有限公司265个</span></div>
                             </div>
                         </div>
                     </div>
@@ -92,8 +92,8 @@
 </body>
 </html>
 <script src="./js/jquery.min.js"></script>
-<script src="./js/request.js"></script>
-<script src="./js/create-echarts.js"></script>
+<!--<script src="./js/request.js"></script>-->
+<!--<script src="./js/create-echarts.js"></script>-->
 <script type="text/javascript">
     function showTime() {
         var date = new Date();
@@ -114,18 +114,18 @@
     let listColorsTitle = document.getElementsByClassName("list-colors-title");
     let listColorsList1 = document.getElementsByClassName("list-colors-list")[0];
     let listColorsList2 = document.getElementsByClassName("list-colors-list")[1];
-    var createDom = function ({dom, className, style, text, onClick}) {
-        const content = document.createElement(dom);
-        content.className = className;
-        if (style) {
-            content.setAttribute("style", style);
+    var createDom = function (data) {
+        const content = document.createElement(data.dom);
+        content.className = data.className;
+        if (data.style) {
+            content.setAttribute("style", data.style);
         }
-        if (text) {
-            content.textContent = text;
+        if (data.text) {
+            content.textContent = data.text;
         }
-        if (onClick) {
+        if (typeof data.onClick === "function") {
             content.addEventListener("click", function (e) {
-                return onClick(content)
+                return data.onClick(content)
             })
         }
         return content
@@ -135,7 +135,7 @@
         var dom = listColors.children[num];
         var div1 = createDom({dom:'div', className:'list-colors-item'});
         var div2style = dom.querySelector("div").style;
-        var div2 = createDom({dom:'div', style:`width:${div2style.width};background:${div2style.background};`});
+        var div2 = createDom({dom:'div', style:'width:' + div2style.width + ';background:' + div2style.background + ';'});
         var span1 = createDom({dom:'span', text: dom.querySelector("span").textContent});
 
         div1.appendChild(div2);
@@ -144,76 +144,154 @@
         listColors.appendChild(div1);
     }
 
-    var setIntervalStart = function ({dom, num}) {
-        if (dom.children[num]) {
+    var setIntervalStart = function (data) {
+        if (data.dom.children[data.num]) {
             var aList = 0;
             setInterval(function () {
-                var marginTop = dom.style.marginTop.split("px")[0];
-                dom.style.marginTop = `${parseInt(marginTop) - 1}px`;
+                var marginTop = data.dom.style.marginTop.split("px")[0];
+                data.dom.style.marginTop = parseInt(marginTop) - 1 + 'px';
                 if(Math.abs(parseInt(marginTop)) % 10 === 0) {
-                    startRotation(aList, num);
+                    startRotation(aList, data.num);
                     aList ++
                 }
             }, 50);
         } else {
             var div = createDom({dom:'div', className:'noneList', text: '没有数据~~', style: "padding: 30px;font-size: 1.5rem;text-align: center;font-weight: 700;color: white;"});
-            dom.appendChild(div);
+            data.dom.appendChild(div);
         }
     }
+    setIntervalStart({dom: listColorsList1, num: 0});
 
-    var setDomInHTML = function ({index,title, value, width, color}) {
-        var listColors = document.getElementsByClassName("list-colors-list")[index];
-        var div1 = createDom({dom:'div', className:'list-colors-item'});
-        var div2 = createDom({dom:'div', style:`width:${width};background:${color};`});
-        var span1 = createDom({dom:'span', text: title + value + "个"});
-
-        div1.appendChild(div2);
-        div1.appendChild(span1);
-        listColors.appendChild(div1);
+    // var setDomInHTML = function ({index,title, value, width, color}) {
+    //     var listColors = document.getElementsByClassName("list-colors-list")[index];
+    //     var div1 = createDom({dom:'div', className:'list-colors-item'});
+    //     var div2 = createDom({dom:'div', style:'width:'+width+';background:' + color+';'});
+    //     var span1 = createDom({dom:'span', text: title + value + "个"});
+    //
+    //     div1.appendChild(div2);
+    //     div1.appendChild(span1);
+    //     listColors.appendChild(div1);
+    // }
+    // RequestApi({url: "expired-domain-top", type: "GET", callback: function(res){
+    //     let expired = [];
+    //     if (res.code === 200) {
+    //         for (var i = 0; i < res.data.expire.nums.length; i ++) {
+    //             let item = res.data.expire.provider[i];
+    //             expired.push({
+    //                 title: item.split(':')[0],
+    //                 value: res.data.expire.nums[i]
+    //             })
+    //         }
+    //     }
+    //     let count = getArrayValue(expired);
+    //         listColorsTitle[0].textContent =  listColorsTitle[0].textContent + count;
+    //     for (var j = 0; j < expired.length; j ++) {
+    //         setDomInHTML({index: 0, title: expired[j].title, value: expired[j].value, width: (parseInt(expired[j].value) / count * 100) + "%", color: getArrayColor()})
+    //     }
+    //     setIntervalStart({dom: listColorsList1, num: 0});
+    // }})
+    // RequestApi({url: "violation-top", type: "GET", callback: function(res){
+    //     let violation = [];
+    //     if (res.code === 200) {
+    //         for (var i = 0; i < res.data.violation.nums.length; i ++) {
+    //             let item = res.data.violation.provider[i];
+    //             violation.push({
+    //                 title: item.split(':')[0],
+    //                 value: res.data.violation.nums[i]
+    //             })
+    //         }
+    //     }
+    //     let count = getArrayValue(violation);
+    //     listColorsTitle[1].textContent =  listColorsTitle[1].textContent + count;
+    //     for (var j = 0; j < violation.length; j ++) {
+    //         setDomInHTML({index: 1, title: violation[j].title, value: violation[j].value, width: (parseInt(violation[j].value) / count * 100) + "%", color: getArrayColor()})
+    //     }
+    //     setIntervalStart({dom: listColorsList2, num: 1});
+    // }})
+    // RequestApi({url: "stats-api", type: "GET", callback: function(res){
+    //     if (res.code === 200) {
+    //         let tabText = document.getElementsByClassName("tab-count");
+    //         tabText[0].childNodes[0].textContent = res.data.main_count;
+    //         tabText[1].childNodes[0].textContent = res.data.domain_count;
+    //     }
+    // }})
+</script>
+<script>
+    // var data = [];
+    // RequestApi({url: "map-data",type:"GET", callback: function(res){
+    //         if(res.code === 200) {
+    //             for (var i = 0; i < res.data.length; i ++) {
+    //                 let result = res.data[i];
+    //                 data.push({
+    //                     name:result.name.split(':')[0],
+    //                     itemStyle: {
+    //                         normal: {
+    //                             areaColor: '#31398f',
+    //                             borderColor: '#35ff9c'
+    //                         }
+    //                     },
+    //                     label: {
+    //                         formatter: function (data, type) {
+    //                             let info = data.data;
+    //                             //这里对不同的内容进行标识 a，b，或者可以随便自己起个别的名字
+    //                             return info.name + '：' + info.value + '个';
+    //                         },
+    //                     },
+    //                     value: result.value
+    //                 })
+    //             }
+    //         }
+    //         console.log(data)
+    //         setCanvasMap(data);
+    //     }})
+    var setCanvasMap = function (data) {
+        var myChart = echarts.init(document.getElementById("mapadd"));
+        option = {
+            tooltip : {
+                trigger: 'item',
+                formatter: '{b}'
+            },
+            series : [{
+                name: '贵州',
+                type: 'map',
+                mapType: '贵州',
+                roam: false,
+                top:'8%',
+                zoom:1.2,
+                x:'10%',
+                selectedMode : 'single',
+                itemStyle:{
+                    normal:{
+                        label:{
+                            show:true,
+                            textStyle: {
+                                color: "#ffffff",
+                                fontSize: 18
+                            }
+                        },
+                        borderColor:'#61c9f3',//区块的边框颜色
+                        areaColor: '#31398f',
+                    },
+                    emphasis:{//鼠标hover样式
+                        label:{
+                            show:true,
+                            textStyle:{
+                                color:'#ffffff'
+                            },
+                        },
+                        areaColor: '#60c7f2',
+                    }
+                },
+                data: data
+            }]
+        };
+        myChart.setOption(option);
     }
-    RequestApi({url: "expired-domain-top", type: "GET", callback: function(res){
-        let expired = [];
-        if (res.code === 200) {
-            for (var i = 0; i < res.data.expire.nums.length; i ++) {
-                let item = res.data.expire.provider[i];
-                expired.push({
-                    title: item.split(':')[0],
-                    value: res.data.expire.nums[i]
-                })
-            }
-        }
-        let count = getArrayValue(expired);
-            listColorsTitle[0].textContent =  listColorsTitle[0].textContent + count;
-        for (var j = 0; j < expired.length; j ++) {
-            setDomInHTML({index: 0, title: expired[j].title, value: expired[j].value, width: (parseInt(expired[j].value) / count * 100) + "%", color: getArrayColor()})
-        }
-        console.log(444)
-            setIntervalStart({dom: listColorsList1, num: 0});
-        }})
-    RequestApi({url: "violation-top", type: "GET", callback: function(res){
-            let violation = [];
-            if (res.code === 200) {
-                for (var i = 0; i < res.data.violation.nums.length; i ++) {
-                    let item = res.data.violation.provider[i];
-                    violation.push({
-                        title: item.split(':')[0],
-                        value: res.data.violation.nums[i]
-                    })
-                }
-            }
-            let count = getArrayValue(violation);
-            listColorsTitle[1].textContent =  listColorsTitle[1].textContent + count;
-            for (var j = 0; j < violation.length; j ++) {
-                setDomInHTML({index: 1, title: violation[j].title, value: violation[j].value, width: (parseInt(violation[j].value) / count * 100) + "%", color: getArrayColor()})
-            }
-            console.log(555)
-            setIntervalStart({dom: listColorsList2, num: 1});
-        }})
-    RequestApi({url: "stats-api", type: "GET", callback: function(res){
-        if (res.code === 200) {
-            let tabText = document.getElementsByClassName("tab-count");
-            tabText[0].childNodes[0].textContent = res.data.main_count;
-            tabText[1].childNodes[0].textContent = res.data.domain_count;
-        }
-    }})
+    setCanvasMap([
+        {name: '铜仁地区', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+        {name: '遵义市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+        {name: '贵阳市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+        {name: '六盘水市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+        {name: '黔东南苗族侗族自治州', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2}
+    ]);
 </script>
