--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>可视化-数据中心</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/echarts.min.js"></script>
-    <script src="./js/map/guizhou.js"></script>
+<!--    <script src="./js/echarts.min.js"></script>-->
+<!--    <script src="./js/map/guizhou.js"></script>-->
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=1.0&type=webgl&ak=jMl7FS1Kr5TbOZBta3UmYETKqZYWlndw"></script>
 </head>
 <body scroll="no">
 <div id="particles-js" class="main">
     <div class="main_con">
         <div class="main-header">
             <div class="header-logo" style="margin-right: 20px"> </div>
-            <div class="header-title" style="margin-right: 20px"><span>千港社区管理平台</span></div>
+            <div class="header-title" style="margin-right: 20px"><span>白云区公安分部平台</span></div>
             <div class="header-time" id="header-time">
                 &nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;-&nbsp;&nbsp; &nbsp;&nbsp;:&nbsp;&nbsp;:&nbsp;&nbsp;
             </div>
@@ -287,67 +288,265 @@
     //         }
     //         setCanvasMap(data);
     //     }})
-    var setCanvasMap = function (data) {
-        var myChart = echarts.init(document.getElementById("mapadd"));
-        option = {
-            tooltip : {
-                trigger: 'item',
-                formatter: '{b}'
-            },
-            series : [{
-                name: '贵州',
-                type: 'map',
-                mapType: '贵州',
-                roam: false,
-                top:'middle',
-                zoom:1.2,
-                x:'10%',
-                selectedMode : 'single',
-                itemStyle:{
-                    normal:{
-                        label:{
-                            show:true,
-                            textStyle: {
-                                color: "#ffffff",
-                                fontSize: 18
-                            }
-                        },
-                        borderColor:'#61c9f3',//区块的边框颜色
-                        areaColor: '#31398f',
-                    },
-                    emphasis:{//鼠标hover样式
-                        label:{
-                            show:true,
-                            textStyle:{
-                                color:'#ffffff'
-                            },
-                        },
-                        areaColor: '#60c7f2',
-                    }
-                },
-                data: data
-            }]
-        };
-        myChart.setOption(option);
+    // var setCanvasMap = function (data) {
+    //     var myChart = echarts.init(document.getElementById("mapadd"));
+    //     option = {
+    //         tooltip : {
+    //             trigger: 'item',
+    //             formatter: '{b}'
+    //         },
+    //         series : [{
+    //             name: '贵州',
+    //             type: 'map',
+    //             mapType: '贵州',
+    //             roam: false,
+    //             top:'middle',
+    //             zoom:1.2,
+    //             // x:'10%',
+    //             selectedMode : 'single',
+    //             itemStyle:{
+    //                 normal:{
+    //                     label:{
+    //                         show:true,
+    //                         textStyle: {
+    //                             color: "#ffffff",
+    //                             fontSize: 18
+    //                         }
+    //                     },
+    //                     borderColor:'#61c9f3',//区块的边框颜色
+    //                     areaColor: '#31398f',
+    //                 },
+    //                 emphasis:{//鼠标hover样式
+    //                     label:{
+    //                         show:true,
+    //                         textStyle:{
+    //                             color:'#ffffff'
+    //                         },
+    //                     },
+    //                     areaColor: '#60c7f2',
+    //                 }
+    //             },
+    //             data: data
+    //         }]
+    //     };
+    //     myChart.setOption(option);
+    // }
+    // // 地图假数据；
+    // setCanvasMap([
+    //     {name: '铜仁地区', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+    //     {name: '遵义市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+    //     {name: '贵阳市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+    //     {name: '六盘水市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
+    //     {name: '黔东南苗族侗族自治州', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2}
+    // ]);
+</script>
+<script type="text/javascript">
+    var map = new BMapGL.Map("mapadd",{
+        enableRotate: false,    // 禁止地图旋转和倾斜可以通过配置项进行设置
+        enableTilt: false,      // 禁止地图旋转和倾斜可以通过配置项进行设置
+    });
+    // 创建地图实例
+    var mainPoint = new BMapGL.Point(113.34307,23.30290);
+    // 创建点坐标
+    map.centerAndZoom(mainPoint, 15);
+    // 初始化地图，设置中心点坐标和地图级别
+    map.enableScrollWheelZoom(true);
+    // 鼠标滚轮控制地图缩放
+
+    // 使用地图样式
+    $.getJSON('./common/style/mapStyle1.json', function (data) {
+        map.setMapStyleV2({styleJson:data});
+    })
+
+    map.setHeading(0);   //设置地图旋转角度
+    map.setTilt(43);       //设置地图的倾斜角度
+    // map.setMapType(BMAP_EARTH_MAP);      // 设置地图类型为地球模式
+    map.setZoom(12);
+    // var scaleCtrl = new BMapGL.ScaleControl();  // 添加比例尺控件
+    // map.addControl(scaleCtrl);
+    // var zoomCtrl = new BMapGL.ZoomControl();  // 添加缩放控件
+    // map.addControl(zoomCtrl);
+    // var cityCtrl = new BMapGL.CityListControl();  // 添加城市列表控件
+    // map.addControl(cityCtrl);
+
+    // 通过偏移量来指示控件距离地图边界有多少像素
+    // var opts = {
+    //     offset: new BMapGL.Size(150, 5)
+    // }
+    // // 添加控件
+    // map.addControl(new BMapGL.ScaleControl(opts));
+
+    // 移除控件
+    // map.removeControl(new BMapGL.ScaleControl(opts));
+
+    var point1 = new BMapGL.Point(113.27307,23.45290);
+    // 创建贴图纹理Icon
+    var icon1 = new BMapGL.Icon("./common/image/star.png", new BMapGL.Size(40, 40));
+    // 创建带高度的点，这里只需要size和icon
+    var marker1 = new BMapGL.Marker3D(point1, 0, {
+        size: 23,
+        icon: icon1
+    });
+    map.addOverlay(marker1);              // 将标注添加到地图中
+
+    // 将点添加到地图上
+    var markers = new BMapGL.Marker(point1);  // 创建标注
+    map.addOverlay(markers);              // 将标注添加到地图中
+    var opts = {
+        width : 200,     // 信息窗口宽度
+        height: 100,     // 信息窗口高度
+        title : "白云幼儿园" , // 信息窗口标题
     }
-    // 地图假数据；
-    setCanvasMap([
-        {name: '铜仁地区', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
-        {name: '遵义市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
-        {name: '贵阳市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
-        {name: '六盘水市', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2},
-        {name: '黔东南苗族侗族自治州', itemStyle: {normal: {areaColor: '#31398f', borderColor: '#35ff9c'}}, value: 2}
-    ]);
+    var infoWindow = new BMapGL.InfoWindow("地址：广东省白云区康粤大道88号", opts);  // 创建信息窗口对象
+    markers.addEventListener("click", function(){
+        map.openInfoWindow(infoWindow, point1); //开启信息窗口
+    });
+
+    var point2 = new BMapGL.Point(113.27307,23.55290);
+    var marker2 = new BMapGL.Marker(point2);        // 创建标注
+    map.addOverlay(marker2);                        // 将标注添加到地图中
+
+    var point3 = new BMapGL.Point(113.27307,23.65290);
+    var marker3 = new BMapGL.Marker(point3);        // 创建标注
+    map.addOverlay(marker3);                        // 将标注添加到地图中
+    var myIcon = new BMapGL.Icon("./common/image/star.png", new BMapGL.Size(23,23), {
+        // 指定定位位置。
+        // 当标注显示在地图上时，其所指向的地理位置距离图标左上
+        // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
+        // 图标中央下端的尖角位置。
+        // anchor: new BMapGL.Size(8, 8),
+        // 设置图片偏移。
+        // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
+        // 需要指定大图的偏移位置，此做法与css sprites技术类似。
+        // imageOffset: new BMapGL.Size(0, 0 - 25)   // 设置图片偏移
+    });
+    // 创建标注对象并添加到地图
+    var markerMain = new BMapGL.Marker(mainPoint, {icon: myIcon});
+    map.addOverlay(markerMain);
+    markerMain.addEventListener("click", function(){
+        alert("您点击了标注");
+    });
+
+    // 折线覆盖率
+    var polyline = new BMapGL.Polyline([
+        new BMapGL.Point(113.27307,23.35290),
+        new BMapGL.Point(113.27307,23.45290),
+        new BMapGL.Point(113.27307,23.55290),
+        new BMapGL.Point(113.27307,23.65290)
+    ], {strokeColor:"blue", strokeWeight:2, strokeOpacity:0.5});
+    map.addOverlay(polyline);
+
+    // // 封闭图形覆盖率
+    // var polygon = new BMapGL.Polygon([
+    //     new BMapGL.Point(113.27307,23.35290),
+    //     new BMapGL.Point(113.27307,23.45290),
+    //     new BMapGL.Point(113.27307,23.55290),
+    //     new BMapGL.Point(113.27307,23.65290),
+    //     new BMapGL.Point(113.37307,23.65290)
+    // ], {strokeColor:"blue", strokeWeight:2, strokeOpacity:0.5});
+    // map.addOverlay(polygon);
+
+    // 创建镂空多边形，并添加到地图上
+    // var bd = new BMapGL.Boundary();
+    // bd.get('广州市白云区', function (rs) {
+    //     map.clearOverlays();
+    //     var hole = new BMapGL.Polygon(rs.boundaries, {
+    //         fillColor: 'white',
+    //         fillOpacity: 0.9
+    //     });
+    //     map.addOverlay(hole);
+    // });
+
+
+    // function getAera() {
+    //     //网格渲染
+    //     var bdary = new BMapGL.Boundary();
+    //     bdary.get("广州市白云区", function (rs) {//获取行政区域
+    //         var count = rs.boundaries.length; //行政区域的点有多少个
+    //         map.clearOverlays();//清除地图覆盖物
+    //         var EN_JW = "180, 90;";//东北角
+    //         var NW_JW = "-180,  90;";//西北角
+    //         var WS_JW = "-180, -90;";//西南角
+    //         var SE_JW = "180, -90;";//东南角
+    //         //添加环形遮罩层
+    //         var ply1 = new BMapGL.Polygon(rs.boundaries[0] + SE_JW + SE_JW + WS_JW + NW_JW + EN_JW + SE_JW, {
+    //             strokeColor: "none",
+    //             fillColor: "rgba(0,0,0,0.5)",
+    //             fillOpacity: 1,
+    //             strokeOpacity: 0.5
+    //         }); //建立多边形覆盖物
+    //         map.addOverlay(ply1);
+    //         // var prism = new BMapGL.Prism(rs, 5000, {
+    //         //     topFillColor: '#5679ea',
+    //         //     topFillOpacity: 0.5,
+    //         //     sideFillColor: '#5679ea',
+    //         //     sideFillOpacity: 0.9
+    //         // });
+    //         // map.addOverlay(prism);
+    //
+    //         //给目标行政区划添加边框，其实就是给目标行政区划添加一个没有填充物的遮罩层
+    //         var ply = new BMapGL.Polygon(rs.boundaries[0], {strokeWeight: 2, strokeColor: "rgba(134,134,134,0)", fillColor: ""});
+    //         map.addOverlay(ply);
+    //         map.setViewport(ply.getPath());//调整视野
+    //     });
+    // }
+    // getAera()
+
+    function getHealer(){
+        var bd1 = new BMapGL.Boundary();
+        bd1.get('广州市白云区', function (rs) {
+            let count = rs.boundaries.length;
+            for (let i = 0; i < count; i++) {
+                let path = [];
+                let str = rs.boundaries[i].replace(' ', '');
+                let points = str.split(';');
+                for (let j = 0; j < points.length; j++) {
+                    let lng = points[j].split(',')[0];
+                    let lat = points[j].split(',')[1];
+                    path.push(new BMapGL.Point(lng, lat));
+                }
+                let prism = new BMapGL.Prism(path, 1000, {
+                    topFillColor: 'rgba(65,86,140,0.77)',
+                    topFillOpacity: 0.3,
+                    sideFillColor: '#112e85',
+                    sideFillOpacity: 0.5
+                });
+                map.addOverlay(prism);
+
+                // 绑定鼠标事件
+                var events = ['click', 'mouseover', 'mouseout'];
+                for (let i = 0; i < events.length; i++) {
+                    prism.addEventListener(events[i], function (e) {
+                        switch (events[i]) {
+                            case 'click':
+                                alert('广州市白云区');
+                                break;
+                            case 'mouseover':
+                                e.target.setTopFillColor('rgba(126,147,238,0.42)');
+                                e.target.setTopFillOpacity(0.2);
+                                break;
+                            case 'mouseout':
+                                e.target.setTopFillColor('rgba(117,143,241,0.66)');
+                                e.target.setTopFillOpacity(0.5);
+                                break;
+                        }
+                    });
+                }
+            }
+        });
+    }
+    getHealer()
+
 </script>
 <script>
-    let width = window.screen.width / 1240 * 100;
+    let width = window.screen.width / 1540 * 100;
     let html = document.querySelector("html");
     html.style.fontSize = width + "px";
     console.log(width, window.screen.width)
-    let watchWindowSize = (e) => {
+    let watchWindowSize = function (e) {
         let html = document.querySelector("html");
         let screenWidth = e.currentTarget.screen.width;
-        let rem = screenWidth / 1240 * 100;
+        let rem = screenWidth / 1540 * 100;
         html.style.fontSize = rem + "px";
     };
 
