--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
         var minute = date.getMinutes();
         var second = date.getSeconds();
         second = second < 10 ? "0" + second : second;
-        var current = year + "-" + month + "-" + day + " " + hour + ":" + minute + ":" + second;
-        document.getElementById("header-time").innerHTML = current;
+        document.getElementById("header-time").innerHTML = year + "-" + month + "-" + day + " " + hour + ":" + minute + ":" + second;
     }
     setInterval("showTime()", 1000);//每隔1000毫秒（即1秒）显示一次当前时间
 </script>
@@ -348,153 +347,42 @@
         enableRotate: false,    // 禁止地图旋转和倾斜可以通过配置项进行设置
         enableTilt: false,      // 禁止地图旋转和倾斜可以通过配置项进行设置
     });
-    // 创建地图实例
+    var starIcon = new BMapGL.Icon("./common/image/star.png", new BMapGL.Size(23,23), {});
     var mainPoint = new BMapGL.Point(113.34307,23.30290);
-    // 创建点坐标
-    map.centerAndZoom(mainPoint, 15);
-    // 初始化地图，设置中心点坐标和地图级别
-    map.enableScrollWheelZoom(true);
-    // 鼠标滚轮控制地图缩放
-
-    // 使用地图样式
+        map.centerAndZoom(mainPoint, 12);
+    var markerMain = new BMapGL.Marker(mainPoint, {icon: starIcon});
+        map.addOverlay(markerMain);
     $.getJSON('./common/style/mapStyle2.json', function (data) {
         map.setMapStyleV2({styleJson:data});
     })
-
-    map.setHeading(0);   //设置地图旋转角度
-    map.setTilt(43);       //设置地图的倾斜角度
-    // map.setMapType(BMAP_EARTH_MAP);      // 设置地图类型为地球模式
-    map.setZoom(12);
-    // var scaleCtrl = new BMapGL.ScaleControl();  // 添加比例尺控件
-    // map.addControl(scaleCtrl);
-    // var zoomCtrl = new BMapGL.ZoomControl();  // 添加缩放控件
-    // map.addControl(zoomCtrl);
-    // var cityCtrl = new BMapGL.CityListControl();  // 添加城市列表控件
-    // map.addControl(cityCtrl);
-
-    // 通过偏移量来指示控件距离地图边界有多少像素
-    // var opts = {
-    //     offset: new BMapGL.Size(150, 5)
-    // }
-    // // 添加控件
-    // map.addControl(new BMapGL.ScaleControl(opts));
-
-    // 移除控件
-    // map.removeControl(new BMapGL.ScaleControl(opts));
-
-    var point1 = new BMapGL.Point(113.27307,23.45290);
-    // 创建贴图纹理Icon
-    var icon1 = new BMapGL.Icon("./common/image/star.png", new BMapGL.Size(40, 40));
-    // 创建带高度的点，这里只需要size和icon
-    var marker1 = new BMapGL.Marker3D(point1, 0, {
-        size: 23,
-        icon: icon1
-    });
-    map.addOverlay(marker1);              // 将标注添加到地图中
-
-    // 将点添加到地图上
-    var markers = new BMapGL.Marker(point1);  // 创建标注
-    map.addOverlay(markers);              // 将标注添加到地图中
-    var opts = {
-        width : 200,     // 信息窗口宽度
-        height: 100,     // 信息窗口高度
-        title : "白云幼儿园" , // 信息窗口标题
+        map.setHeading(0);
+        map.setTilt(43);
+        map.setZoom(12);        // 再次设置地图级别
+    function createPoint (data) {
+        var point = new BMapGL.Point(data.longitude,data.latitude);
+        var marker = new BMapGL.Marker3D(point, 0, {
+            size: 23,
+            icon: starIcon
+        });
+        map.addOverlay(marker);
+        if (data.name) {
+            var label = new BMapGL.Label(data.name, {
+                position: point,
+                offset: new BMapGL.Size(0, 15)
+            })
+            map.addOverlay(label);
+            label.setStyle({
+                border: '2px solid #1E90FF',
+                backgroundColor: 'rgba(69, 109, 255, 0.82)',
+                fontSize: '0.12rem',
+                color: 'rgb(255, 255, 255)',
+                width: '100px',
+                borderRadius: '4px',
+                textAlign: 'center',
+                marginLeft: '-50px'
+            })
+        }
     }
-    var infoWindow = new BMapGL.InfoWindow("地址：广东省白云区康粤大道88号", opts);  // 创建信息窗口对象
-    markers.addEventListener("click", function(){
-        map.openInfoWindow(infoWindow, point1); //开启信息窗口
-    });
-
-    var point2 = new BMapGL.Point(113.27307,23.55290);
-    var marker2 = new BMapGL.Marker(point2);        // 创建标注
-    map.addOverlay(marker2);                        // 将标注添加到地图中
-
-    var point3 = new BMapGL.Point(113.27307,23.65290);
-    var marker3 = new BMapGL.Marker(point3);        // 创建标注
-    map.addOverlay(marker3);                        // 将标注添加到地图中
-    var myIcon = new BMapGL.Icon("./common/image/star.png", new BMapGL.Size(23,23), {
-        // 指定定位位置。
-        // 当标注显示在地图上时，其所指向的地理位置距离图标左上
-        // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
-        // 图标中央下端的尖角位置。
-        // anchor: new BMapGL.Size(8, 8),
-        // 设置图片偏移。
-        // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
-        // 需要指定大图的偏移位置，此做法与css sprites技术类似。
-        // imageOffset: new BMapGL.Size(0, 0 - 25)   // 设置图片偏移
-    });
-    // 创建标注对象并添加到地图
-    var markerMain = new BMapGL.Marker(mainPoint, {icon: myIcon});
-    map.addOverlay(markerMain);
-    markerMain.addEventListener("click", function(){
-        alert("您点击了标注");
-    });
-
-    // 折线覆盖率
-    var polyline = new BMapGL.Polyline([
-        new BMapGL.Point(113.27307,23.35290),
-        new BMapGL.Point(113.27307,23.45290),
-        new BMapGL.Point(113.27307,23.55290),
-        new BMapGL.Point(113.27307,23.65290)
-    ], {strokeColor:"blue", strokeWeight:2, strokeOpacity:0.5});
-    map.addOverlay(polyline);
-
-    // // 封闭图形覆盖率
-    // var polygon = new BMapGL.Polygon([
-    //     new BMapGL.Point(113.27307,23.35290),
-    //     new BMapGL.Point(113.27307,23.45290),
-    //     new BMapGL.Point(113.27307,23.55290),
-    //     new BMapGL.Point(113.27307,23.65290),
-    //     new BMapGL.Point(113.37307,23.65290)
-    // ], {strokeColor:"blue", strokeWeight:2, strokeOpacity:0.5});
-    // map.addOverlay(polygon);
-
-    // 创建镂空多边形，并添加到地图上
-    // var bd = new BMapGL.Boundary();
-    // bd.get('广州市白云区', function (rs) {
-    //     map.clearOverlays();
-    //     var hole = new BMapGL.Polygon(rs.boundaries, {
-    //         fillColor: 'white',
-    //         fillOpacity: 0.9
-    //     });
-    //     map.addOverlay(hole);
-    // });
-
-
-    // function getAera() {
-    //     //网格渲染
-    //     var bdary = new BMapGL.Boundary();
-    //     bdary.get("广州市白云区", function (rs) {//获取行政区域
-    //         var count = rs.boundaries.length; //行政区域的点有多少个
-    //         map.clearOverlays();//清除地图覆盖物
-    //         var EN_JW = "180, 90;";//东北角
-    //         var NW_JW = "-180,  90;";//西北角
-    //         var WS_JW = "-180, -90;";//西南角
-    //         var SE_JW = "180, -90;";//东南角
-    //         //添加环形遮罩层
-    //         var ply1 = new BMapGL.Polygon(rs.boundaries[0] + SE_JW + SE_JW + WS_JW + NW_JW + EN_JW + SE_JW, {
-    //             strokeColor: "none",
-    //             fillColor: "rgba(0,0,0,0.5)",
-    //             fillOpacity: 1,
-    //             strokeOpacity: 0.5
-    //         }); //建立多边形覆盖物
-    //         map.addOverlay(ply1);
-    //         // var prism = new BMapGL.Prism(rs, 5000, {
-    //         //     topFillColor: '#5679ea',
-    //         //     topFillOpacity: 0.5,
-    //         //     sideFillColor: '#5679ea',
-    //         //     sideFillOpacity: 0.9
-    //         // });
-    //         // map.addOverlay(prism);
-    //
-    //         //给目标行政区划添加边框，其实就是给目标行政区划添加一个没有填充物的遮罩层
-    //         var ply = new BMapGL.Polygon(rs.boundaries[0], {strokeWeight: 2, strokeColor: "rgba(134,134,134,0)", fillColor: ""});
-    //         map.addOverlay(ply);
-    //         map.setViewport(ply.getPath());//调整视野
-    //     });
-    // }
-    // getAera()
-
     function getHealer(){
         var bd1 = new BMapGL.Boundary();
         bd1.get('广州市白云区', function (rs) {
@@ -521,9 +409,6 @@
                 for (let i = 0; i < events.length; i++) {
                     prism.addEventListener(events[i], function (e) {
                         switch (events[i]) {
-                            case 'click':
-                                alert('广州市白云区');
-                                break;
                             case 'mouseover':
                                 e.target.setTopFillColor('rgba(126,147,238,0.42)');
                                 e.target.setTopFillOpacity(0.2);
@@ -537,15 +422,35 @@
                 }
             }
         });
+    };
+
+    var data = [
+        {
+            "lon": 113.27307,
+            "lat": 23.45290,
+            "name": "白云市公安"
+        },
+        {
+            "lon": 113.27307,
+            "lat": 23.55290,
+            "name": "白云市公安"
+        },
+        {
+            "lon": 113.27307,
+            "lat": 23.65290,
+            "name": "白云市公安"
+        }
+    ]
+
+    for (let i = 0; i < data.length; i++) {
+        createPoint({longitude: data[i].lon, latitude: data[i].lat, name: data[i].name})
     }
     getHealer()
-
 </script>
 <script>
     let width = window.screen.width / 1540 * 100;
     let html = document.querySelector("html");
     html.style.fontSize = width + "px";
-    console.log(width, window.screen.width)
     let watchWindowSize = function (e) {
         let html = document.querySelector("html");
         let screenWidth = e.currentTarget.screen.width;
